# assignment-5

./: .gitignore  .pre-commit-config.yaml  bubble_sort.py  insertion_sort.py  pyproject.toml  pytest.ini  quick_sort.py  test_sorts.py
.github/workflows/: main.yml
python_package_exercise/: pre-commit-config.yml
python_package_exercise/test/: test_basic_sort.py
python_package_exercise/test/sort_lib/: bubble_sort.py  insertion_sort.py  quick_sort.py
tests/: test_sorts.py
